# proyecto_grupo_1_2025

./: CMakeLists.txt  README.md  config_nav2.rvis  package.xml
launch/: act_1.xml  act_2.xml  act_3.xml  act_4.xml  example.xml  montecarlo_launch.xml  motecarlo_launch.xml  nav2_launch.xml  proyecto_launch.xml
map/: mapa_bodega.yaml  my_first_slam_map.pgm  my_first_slam_map.yaml  my_first_slam_map_juan.pgm  my_first_slam_map_juan.yaml
nodes/: example.py
rviz/: config_act1.rviz  config_act34.rviz  config_nav2.rviz  config_proyecto.rviz
